connector updated, subscription fixed and working