@@ -4,6 +4,7 @@ import java.awt.BorderLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import javax.swing.*;
 import javax.swing.table.DefaultTableModel;
@@ -15,7 +16,7 @@ public class Table {
 			"Date", "Tournament"};
 	private static final String[] PLAYERS = {"Select", "Name", "Surname", "Elo",
 			"Games Played", "Win Rate"};
-	private static final String[] ANNOUNCES = {"Select", "Name", "Location", "Capacity"};
+	private static final String[] ANNOUNCES = {"Select", "Name", "Location", "Date", "Capacity"};
     private static final JButton confirm = new JButton("Confirm");
     private static final JButton subscribe = new JButton("Subscribe");
     
@@ -105,7 +106,7 @@ public class Table {
         	if (i == 0) {
         		columnModel.getColumn(i).setPreferredWidth(50);
         	} else {
-        		var width = searchType.equals("Announces") ? 180 : 100;
+        		var width = searchType.equals("Announces") ? 150 : 100;
                 table.getColumnModel().getColumn(i).setPreferredWidth(width);
         	}
         }
@@ -125,7 +126,7 @@ public class Table {
     }
 
     // Method to get the index of the selected row
-    private int getSelectedRowIndex() {
+    public int getSelectedRowIndex() {
         for (int i = 0; i < tableModel.getRowCount(); i++) {
             if ((Boolean) tableModel.getValueAt(i, 0)) {
                 return i;
@@ -145,7 +146,7 @@ public class Table {
     	ids.clear();
     	for (Object[] row : data) {
         	List<Object> tmp = new ArrayList<>();
-        	List<Object> tmpRow = new ArrayList<>(List.of(row));
+        	List<Object> tmpRow = new ArrayList<>(Arrays.asList(row));
         	if(useId) {
         		ids.add(tmpRow.get(0).toString());
         		tmpRow.remove(0);
